# steiner-multicycle-problem-3-apx

./: .gitignore  CMakeLists.txt  README.md  _result.csv  main.cpp
allInst/: files.lst  m10Q10s000.tsp.ccpdp  m10Q10s222.tsp.ccpdp  m10Q10s333.tsp.ccpdp  m10Q10s555.tsp.ccpdp  m10Q10s666.tsp.ccpdp  m10Q10s888.tsp.ccpdp  m10Q10s999.tsp.ccpdp  m10Q15s000.tsp.ccpdp  m10Q15s111.tsp.ccpdp  m10Q15s333.tsp.ccpdp  m10Q15s666.tsp.ccpdp  m10Q15s777.tsp.ccpdp  m10Q15s999.tsp.ccpdp  m10Q20s000.tsp.ccpdp  m10Q20s222.tsp.ccpdp  m10Q20s333.tsp.ccpdp  m10Q20s444.tsp.ccpdp  m10Q20s555.tsp.ccpdp  m10Q20s888.tsp.ccpdp  m10Q25s111.tsp.ccpdp  m10Q25s222.tsp.ccpdp  m10Q25s777.tsp.ccpdp  m10Q25s999.tsp.ccpdp  m10Q30s000.tsp.ccpdp  m10Q30s111.tsp.ccpdp  m10Q30s222.tsp.ccpdp  m10Q30s444.tsp.ccpdp  m10Q30s888.tsp.ccpdp  m10Q30s999.tsp.ccpdp  m10Q500s111.tsp.ccpdp  m10Q500s222.tsp.ccpdp  m10Q500s444.tsp.ccpdp  m10Q500s555.tsp.ccpdp  m10Q500s666.tsp.ccpdp  m10Q500s777.tsp.ccpdp  m10Q5s000.tsp.ccpdp  m10Q5s111.tsp.ccpdp  m10Q5s222.tsp.ccpdp  m10Q5s444.tsp.ccpdp  (+66 more)
libs/: dirent.h
libs/lemon-main-a278d16bd2d0/demo/: graph_to_eps_demo.cc
libs/lemon-main-a278d16bd2d0/lemon/: gomory_hu.h  graph_to_eps.h  lmath.h  lp_base.h  matching.h  random.h  time_measure.h
libs/lemon-main-a278d16bd2d0/lemon/bits/: lock.h  lwindows.cc  lwindows.h
libs/lemon-main-a278d16bd2d0/lemon/concepts/: maps.h
plot/: _result_1.csv  generate_plots.py  latex_table.txt
src/: 2apx_survival_net.cpp  2apx_survival_net.h  exact_solution.h  exact_solver.cpp  exact_solver.h  linear_solution.h  new_2apx.h  relaxed_solver_surviv_net.cpp  relaxed_solver_surviv_net.h  smcp_3apx.h  surv_net_2apx.h  tsp.cpp  tsp.h  tsp_c++.cpp  utils.h
testInst/: files.lst  m10Q10s111.tsp.ccpdp  m10Q10s444.tsp.ccpdp  m10Q10s777.tsp.ccpdp  m10Q15s222.tsp.ccpdp  m10Q15s444.tsp.ccpdp  m10Q15s555.tsp.ccpdp  m10Q15s888.tsp.ccpdp  m10Q20s111.tsp.ccpdp  m10Q20s666.tsp.ccpdp  m10Q20s777.tsp.ccpdp  m10Q20s999.tsp.ccpdp  m10Q25s000.tsp.ccpdp  m10Q25s333.tsp.ccpdp  m10Q25s444.tsp.ccpdp  m10Q25s555.tsp.ccpdp  m10Q25s666.tsp.ccpdp  m10Q25s888.tsp.ccpdp  m10Q30s333.tsp.ccpdp  m10Q30s555.tsp.ccpdp  m10Q30s666.tsp.ccpdp  m10Q30s777.tsp.ccpdp  m10Q500s000.tsp.ccpdp  m10Q500s333.tsp.ccpdp  m10Q500s888.tsp.ccpdp  m10Q500s999.tsp.ccpdp  m10Q5s333.tsp.ccpdp  m10Q5s666.tsp.ccpdp  m10Q5s777.tsp.ccpdp  m15Q10s000.tsp.ccpdp  m15Q10s111.tsp.ccpdp  m15Q10s222.tsp.ccpdp  m15Q10s333.tsp.ccpdp  m15Q10s555.tsp.ccpdp  m15Q10s888.tsp.ccpdp  m15Q10s999.tsp.ccpdp  m15Q15s000.tsp.ccpdp  m15Q15s111.tsp.ccpdp  m15Q15s333.tsp.ccpdp  m15Q15s666.tsp.ccpdp  (+66 more)
